<resources>
    <string name="app_name">NavigationDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="droid1">droid1</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="droid3pic">TODO</string>
    <string name="droid2pic">TODO</string>
    <string name="droid1pic">TODO</string>
    <string name="textview">TextView</string>
</resources>